--- a/day-1-flexbox/1-intro-floats/begin/css/floats.css
+++ b/day-1-flexbox/1-intro-floats/begin/css/floats.css
@@ -30,14 +30,66 @@ div img {
 	max-width: 225px; 
 }
 
+.row::after {
+    content:"";
+    display: table;
+    clear:both;
+} 
+
+[class*='col-'] {
+	width: 92%;
+	margin-left: 4%;
+	margin-right: 4%;
+	min-height: 1px;
+}
+
+.col-1-2, 
+.col-1-4 {
+	background-color: #ffc;
+}
+.col-2 {
+	background-color: #fcf;
+}
+.col-3 {
+	background-color: #cff;
+}
+.col-4 {
+	background-color: #ccf;
+}
 /* grid system -- mobile first! */
 
 
 /* Mobile Landscape Screen Sizes */
 @media only screen and (min-width: 480px)  {
 
+	[class*='col-'] {
+		margin-right: 0%;
+		float: left;
+	}
+	.col-1-2,
+	.col-2 {
+		width: 44%;
+	}
+	.col-1-4,
+	.col-3,
+	.col-4 {
+		width: 92%;
+	}
+
 }
 /* Desktop screen Sizes */
 @media only screen and (min-width: 768px) {
-
+	.col-1-2, 
+	.col-1-4 {
+		width: 21%;
+	}
+	.col-2 {
+		width: 46%;
+	}
+	.col-3 {
+		width: 71%;
+	}
+	.col-4 {
+		width: 96%;
+	}
 }
